[project]
name = "ros2-packet-search-kun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
dds-monitor = "ros2_packet_search_kun.dds_socket_monitor:main"
dds-prometheus = "ros2_packet_search_kun.prometheus_exporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
